[package]
name = "convmdblog"
version = "0.1.0"
edition = "2021"


[dependencies]
regex = "1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
serde_with = "2.0.1"
clap = { version = "^3", features = ["derive"] }
clap_complete = "3.1.1"
shellexpand = "2.1"
indexmap = "1.9.1"
pathdiff = "0.2.1"
pulldown-cmark-m6 = { git = "https://github.com/minghu6/pulldown-cmark.git" }
# pulldown-cmark-m6 = { path = "/home/minghu6/coding/Rust/myprojs/pulldown-cmark" }
lol_html = "0.3.1"
